--- a/manifest.json
+++ b/manifest.json
@@ -33,6 +33,9 @@
 	"permissions": [
 		"storage"
 	],
+	"host_permissions": [
+		"https://translation.googleapis.com/*"
+	],
 	"homepage_url": "https://github.com/guoweihua1982/yomichan",
 	"omnibox": {
 		"keyword": "yomi"
@@ -42,7 +45,8 @@
 			"resources": [
 				"img/shrinkButton.png",
 				"img/settingButton.png",
-				"img/icon.png"
+				"img/icon.png",
+				".env"
 			],
 			"matches": [
 				"<all_urls>"
