--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,4 @@
-{	
+{
 	"manifest_version": 3,
 	"name": "yomichan",
 	"version": "1.1.0",
@@ -46,6 +46,11 @@
 				"img/shrinkButton.png",
 				"img/settingButton.png",
 				"img/icon.png",
+				"img/Dell.svg",
+				"img/Setting.svg",
+				"img/Reduce.svg",
+				"img/View.svg",
+				"img/View_hide.svg",
 				".env"
 			],
 			"matches": [
